--- a/RestAPICompleted/RestAPICompleted.csproj
+++ b/RestAPICompleted/RestAPICompleted.csproj
@@ -6,9 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="LinqKit" Version="1.1.26" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.12.2" />
   </ItemGroup>
 
 </Project>
